[package]
description = "Parser/encoder for ASN.1 BER/DER data"
license = "MIT/Apache-2.0"
keywords = ["BER","DER","ASN1","parser","nom"]
homepage = "https://github.com/rusticata/der-parser"
repository = "https://github.com/rusticata/der-parser.git"
name = "der-parser"
version = "6.0.1"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

include = [
  "LICENSE-*",
  "CHANGELOG.md",
  "README.md",
  "UPGRADING.md",
  ".gitignore",
  "Cargo.toml",
  "bench/*.rs",
  "src/*.rs",
  "src/ber/*.rs",
  "src/der/*.rs",
  "tests/*.rs",
  "der-oid-macro/Cargo.toml",
  "der-oid-macro/src/*.rs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitvec = { version="0.22", optional=true }
cookie-factory = { version="0.3.0", optional=true }
nom = "7.0"
rusticata-macros = "4.0"
num-traits = "0.2"
num-bigint = { version = "0.4", optional = true }

der-oid-macro = { version = "0.5", path = "./der-oid-macro" }

[features]
default = ["std"]
bigint = ["num-bigint"]
serialize = ["std", "cookie-factory"]
unstable = []
std = []

[dev-dependencies]
hex-literal = "0.3"
pretty_assertions = "1.0"
test-case = "1.0"
