[package]
description = "Parser/encoder for ASN.1 BER/DER data"
license = "MIT OR Apache-2.0"
keywords = ["BER","DER","ASN1","parser","nom"]
homepage = "https://github.com/rusticata/der-parser"
repository = "https://github.com/rusticata/der-parser.git"
name = "der-parser"
version = "10.0.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"
rust-version = "1.63"

include = [
  "LICENSE-*",
  "CHANGELOG.md",
  "README.md",
  "UPGRADING.md",
  ".gitignore",
  "Cargo.toml",
  "examples/*.rs",
  "src/*.rs",
  "src/ber/*.rs",
  "src/der/*.rs",
  "tests/*.rs",
  "der-oid-macro/Cargo.toml",
  "der-oid-macro/src/*.rs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
asn1-rs = "0.7"
bitvec = { version="1.0", optional=true }
cookie-factory = { version="0.3.0", optional=true }
displaydoc = { version="0.2", default-features=false }
nom = "7.0"
rusticata-macros = "4.0"
num-traits = "0.2"
num-bigint = { version = "0.4", optional = true }

[features]
default = ["std"]
as_bitvec = ["bitvec"]
bigint = ["num-bigint"]
serialize = ["std", "cookie-factory"]
unstable = []
std = []

[dev-dependencies]
hex-literal = "0.4"
pretty_assertions = "1.0"
test-case = "3.0"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "asn1_rs",
  "asn1_rs::*",
  "nom",
  "nom::*",
  "rusticata_macros",
]
